Build: 8971699 Build: 62d67f1 Build: f35e46e Add build script

--- a/output/index.html
+++ b/output/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="../assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <meta name="description"
           content="A personal blog by Chris Dempewolf about science, technology, computers, and computation in general."/>
     <title>Chris Dempewolf's Blog</title>
@@ -11,25 +11,30 @@
 <body>
 <header>
     <nav>
-        <div class="site-title"><a href="../index">Chris Dempewolf</a></div>
+        <div class="site-title"><a href="index.html">Chris Dempewolf</a></div>
         <div class="nav-flex-container">
             <menu>
-                <li><a href="../about">about</a></li>
+                <li><a href="about.html">about</a></li>
                 
-                <li><a href="../resume.pdf" target="_blank">resume</a></li>
-                <li><a href="index">tags</a></li>
+                <li><a href="resume.pdf" target="_blank">resume</a></li>
+                <li><a href="tags/index.html">tags</a></li>
             </menu>
         </div>
     </nav>
 </header>
 <main>
     <article>
-        <h1>    tv
+        <h1>    Posts
 </h1>
             <ul class="content-list">
                     <li>
-                2023-05-12:&nbsp;&nbsp;<a
-                    href="../posts/notes-better-call-saul">Notes: Better Call Saul</a>
+                2023-05-12:&nbsp;&nbsp;<a href="posts/notes-better-call-saul.html">Notes: Better Call Saul</a>
+            </li>
+                    <li>
+                2023-05-06:&nbsp;&nbsp;<a href="posts/building-an-anki-addon.html">Building an Anki Addon</a>
+            </li>
+                    <li>
+                2023-02-27:&nbsp;&nbsp;<a href="posts/hello-world.html">Hello, World</a>
             </li>
             </ul>
     </article>
@@ -39,15 +44,19 @@
         <table>
             <tr>
                 <td class="table-key">Published:&nbsp;&nbsp;</td>
-                <td>2023-05-12 23:23</td>
+                <td>2023-02-27 06:00</td>
             </tr>
+                            <tr>
+                    <td class="table-key">Updated:&nbsp;&nbsp;</td>
+                    <td>2023-05-12 23:23</td>
+                </tr>
                     </table>
     </div>
     </footer>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
         data-cf-beacon="{&quot;token&quot;: &quot;1cea25a8cced4937b47752463ad53c43&quot;}"
         type="db730e4d8fbb6ce6968396cd-text/javascript"></script>
-<script src="../cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js"
+<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js.html"
         data-cf-settings="db730e4d8fbb6ce6968396cd-|49" defer></script>
 </body>
 </html>
