--- a/output/about.html
+++ b/output/about.html
@@ -11,13 +11,13 @@
 <body>
 <header>
     <nav>
-        <div class="site-title"><a href="index">Chris Dempewolf</a></div>
+        <div class="site-title"><a href="index.html">Chris Dempewolf</a></div>
         <div class="nav-flex-container">
             <menu>
-                <li><a href="about">about</a></li>
+                <li><a href="about.html">about</a></li>
                 
                 <li><a href="resume.pdf" target="_blank">resume</a></li>
-                <li><a href="tags/index">tags</a></li>
+                <li><a href="tags/index.html">tags</a></li>
             </menu>
         </div>
     </nav>
@@ -72,7 +72,7 @@
 
     <p>
         I write about computation, biology, cooking, and everything else that piques my interest. Post archive <a
-            href="index">here</a>.
+            href="index.html">here</a>.
     </p>
 
     <p>Thanks for stopping by!</p>
@@ -95,7 +95,7 @@
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
         data-cf-beacon="{&quot;token&quot;: &quot;1cea25a8cced4937b47752463ad53c43&quot;}"
         type="db730e4d8fbb6ce6968396cd-text/javascript"></script>
-<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js"
+<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js.html"
         data-cf-settings="db730e4d8fbb6ce6968396cd-|49" defer></script>
 </body>
 </html>
