Build: 1636f45 Update build script

--- a/output/index.html
+++ b/output/index.html
@@ -28,6 +28,9 @@
 </h1>
             <ul class="content-list">
                     <li>
+                2023-07-05:&nbsp;&nbsp;<a href="posts/how-i-built-this-site.html">How I Built This Site</a>
+            </li>
+                    <li>
                 2023-05-12:&nbsp;&nbsp;<a href="posts/notes-better-call-saul.html">Notes: Better Call Saul</a>
             </li>
                     <li>
@@ -45,7 +48,7 @@
             </tr>
                             <tr>
                     <td class="table-key">Updated:&nbsp;&nbsp;</td>
-                    <td>2023-05-12 23:23</td>
+                    <td>2023-07-05 04:43</td>
                 </tr>
                     </table>
     </div>
