Build: f6ac5c3 Add tag list to index; rename carlota post

--- a/output/index.html
+++ b/output/index.html
@@ -29,20 +29,45 @@
     <article>
         <h1>    Posts
 </h1>
-            <ul class="content-list">
-                    <li>
-                2023-07-08:&nbsp;&nbsp;<a href="posts/recipe-carlotas.html">Recipe: Carlotas</a>
-            </li>
-                    <li>
-                2023-07-05:&nbsp;&nbsp;<a href="posts/how-i-built-this-site.html">How I Built This Site</a>
-            </li>
-                    <li>
-                2023-05-12:&nbsp;&nbsp;<a href="posts/notes-better-call-saul.html">Notes: Better Call Saul</a>
-            </li>
-                    <li>
-                2023-02-27:&nbsp;&nbsp;<a href="posts/hello-world.html">Hello, World</a>
-            </li>
-            </ul>
+            <table class="content-list">
+                    <tr>
+                <td>2023-07-08:&nbsp;&nbsp;</td>
+                <td><a href="posts/carlota.html">Carlota</a></td>
+                <td>
+                    <ul class="post-tag-list">
+                                                    <li><a href="tags/recipes.html">#recipes</a></li>
+                                            </ul>
+                </td>
+            </tr>
+                    <tr>
+                <td>2023-07-05:&nbsp;&nbsp;</td>
+                <td><a href="posts/how-i-built-this-site.html">How I Built This Site</a></td>
+                <td>
+                    <ul class="post-tag-list">
+                                                    <li><a href="tags/php.html">#php</a></li>
+                                                    <li><a href="tags/tech.html">#tech</a></li>
+                                            </ul>
+                </td>
+            </tr>
+                    <tr>
+                <td>2023-05-12:&nbsp;&nbsp;</td>
+                <td><a href="posts/notes-better-call-saul.html">Notes: Better Call Saul</a></td>
+                <td>
+                    <ul class="post-tag-list">
+                                                    <li><a href="tags/notes.html">#notes</a></li>
+                                                    <li><a href="tags/tv.html">#tv</a></li>
+                                            </ul>
+                </td>
+            </tr>
+                    <tr>
+                <td>2023-02-27:&nbsp;&nbsp;</td>
+                <td><a href="posts/hello-world.html">Hello, World</a></td>
+                <td>
+                    <ul class="post-tag-list">
+                                            </ul>
+                </td>
+            </tr>
+            </table>
     </article>
 </main>
 <footer>
@@ -54,7 +79,7 @@
             </tr>
                             <tr>
                     <td class="table-key">Updated:&nbsp;&nbsp;</td>
-                    <td>2023-07-08 04:11</td>
+                    <td>2023-07-08 22:34</td>
                 </tr>
                     </table>
     </div>
