Build: 5ca22e8 Rearrange post index tags

--- a/output/index.html
+++ b/output/index.html
@@ -32,7 +32,13 @@
             <table class="content-list">
                     <tr>
                 <td>2023-07-08:&nbsp;&nbsp;</td>
-                <td><a href="posts/carlota.html">Carlota</a></td>
+                <td>
+                    <a href="posts/carlota.html">Carlota</a>
+
+                </td>
+            </tr>
+            <tr>
+                <td><!-- Empty <td> to align tags with title above. --></td>
                 <td>
                     <ul class="post-tag-list">
                                                     <li><a href="tags/recipes.html">#recipes</a></li>
@@ -41,7 +47,13 @@
             </tr>
                     <tr>
                 <td>2023-07-05:&nbsp;&nbsp;</td>
-                <td><a href="posts/how-i-built-this-site.html">How I Built This Site</a></td>
+                <td>
+                    <a href="posts/how-i-built-this-site.html">How I Built This Site</a>
+
+                </td>
+            </tr>
+            <tr>
+                <td><!-- Empty <td> to align tags with title above. --></td>
                 <td>
                     <ul class="post-tag-list">
                                                     <li><a href="tags/php.html">#php</a></li>
@@ -51,7 +63,13 @@
             </tr>
                     <tr>
                 <td>2023-05-12:&nbsp;&nbsp;</td>
-                <td><a href="posts/notes-better-call-saul.html">Notes: Better Call Saul</a></td>
+                <td>
+                    <a href="posts/notes-better-call-saul.html">Notes: Better Call Saul</a>
+
+                </td>
+            </tr>
+            <tr>
+                <td><!-- Empty <td> to align tags with title above. --></td>
                 <td>
                     <ul class="post-tag-list">
                                                     <li><a href="tags/notes.html">#notes</a></li>
@@ -61,7 +79,13 @@
             </tr>
                     <tr>
                 <td>2023-02-27:&nbsp;&nbsp;</td>
-                <td><a href="posts/hello-world.html">Hello, World</a></td>
+                <td>
+                    <a href="posts/hello-world.html">Hello, World</a>
+
+                </td>
+            </tr>
+            <tr>
+                <td><!-- Empty <td> to align tags with title above. --></td>
                 <td>
                     <ul class="post-tag-list">
                                             </ul>
