Build: 43423dc Add post about converting shitty Amazon HTML

--- a/output/index.html
+++ b/output/index.html
@@ -31,13 +31,28 @@
 </h1>
             <table class="content-list">
                     <tr>
-                <td>2023-07-08:&nbsp;&nbsp;</td>
+                <td>2023-07-20:&nbsp;&nbsp;</td>
                 <td>
-                    <a href="posts/carlota.html">Carlota</a>
-
+                    <a href="posts/converting-kindle-notes-to-markdown.html">Converting Kindle Notes to Markdown</a>
                 </td>
             </tr>
-            <tr>
+            <tr class="tag-row">
+                <td><!-- Empty <td> to align tags with title above. --></td>
+                <td>
+                    <ul class="post-tag-list">
+                                                    <li><a href="tags/perl.html">#perl</a></li>
+                                                    <li><a href="tags/regex.html">#regex</a></li>
+                                                    <li><a href="tags/tech.html">#tech</a></li>
+                                            </ul>
+                </td>
+            </tr>
+                    <tr>
+                <td>2023-07-08:&nbsp;&nbsp;</td>
+                <td>
+                    <a href="posts/recipe-carlota.html">Recipe: Carlota</a>
+                </td>
+            </tr>
+            <tr class="tag-row">
                 <td><!-- Empty <td> to align tags with title above. --></td>
                 <td>
                     <ul class="post-tag-list">
@@ -49,10 +64,9 @@
                 <td>2023-07-05:&nbsp;&nbsp;</td>
                 <td>
                     <a href="posts/how-i-built-this-site.html">How I Built This Site</a>
-
                 </td>
             </tr>
-            <tr>
+            <tr class="tag-row">
                 <td><!-- Empty <td> to align tags with title above. --></td>
                 <td>
                     <ul class="post-tag-list">
@@ -65,10 +79,9 @@
                 <td>2023-05-12:&nbsp;&nbsp;</td>
                 <td>
                     <a href="posts/notes-better-call-saul.html">Notes: Better Call Saul</a>
-
                 </td>
             </tr>
-            <tr>
+            <tr class="tag-row">
                 <td><!-- Empty <td> to align tags with title above. --></td>
                 <td>
                     <ul class="post-tag-list">
@@ -81,10 +94,9 @@
                 <td>2023-02-27:&nbsp;&nbsp;</td>
                 <td>
                     <a href="posts/hello-world.html">Hello, World</a>
-
                 </td>
             </tr>
-            <tr>
+            <tr class="tag-row">
                 <td><!-- Empty <td> to align tags with title above. --></td>
                 <td>
                     <ul class="post-tag-list">
@@ -103,7 +115,7 @@
             </tr>
                             <tr>
                     <td class="table-key">Updated:&nbsp;&nbsp;</td>
-                    <td>2023-07-08 22:34</td>
+                    <td>2023-07-20 09:46</td>
                 </tr>
                     </table>
     </div>
