Build: 0cbd7e3 Update resume to use LaTeX version

--- a/output/index.html
+++ b/output/index.html
@@ -30,96 +30,115 @@
         <h1>    Posts
 </h1>
             <table class="content-list">
-                    <tr>
-                <td>2023-07-20:&nbsp;&nbsp;</td>
-                <td>
-                    <a href="posts/converting-kindle-notes-to-markdown.html">Converting Kindle Notes to Markdown</a>
-                </td>
-            </tr>
-            <tr class="tag-row">
-                <td><!-- Empty <td> to align tags with title above. --></td>
-                <td>
-                    <ul class="post-tag-list">
-                                                    <li><a href="tags/perl.html">#perl</a></li>
-                                                    <li><a href="tags/regex.html">#regex</a></li>
-                                                    <li><a href="tags/tech.html">#tech</a></li>
-                                            </ul>
-                </td>
-            </tr>
-                    <tr>
-                <td>2023-07-08:&nbsp;&nbsp;</td>
-                <td>
-                    <a href="posts/recipe-carlota.html">Recipe: Carlota</a>
-                </td>
-            </tr>
-            <tr class="tag-row">
-                <td><!-- Empty <td> to align tags with title above. --></td>
-                <td>
-                    <ul class="post-tag-list">
-                                                    <li><a href="tags/recipes.html">#recipes</a></li>
-                                            </ul>
-                </td>
-            </tr>
-                    <tr>
-                <td>2023-07-05:&nbsp;&nbsp;</td>
-                <td>
-                    <a href="posts/how-i-built-this-site.html">How I Built This Site</a>
-                </td>
-            </tr>
-            <tr class="tag-row">
-                <td><!-- Empty <td> to align tags with title above. --></td>
-                <td>
-                    <ul class="post-tag-list">
-                                                    <li><a href="tags/php.html">#php</a></li>
-                                                    <li><a href="tags/tech.html">#tech</a></li>
-                                            </ul>
-                </td>
-            </tr>
-                    <tr>
-                <td>2023-05-12:&nbsp;&nbsp;</td>
-                <td>
-                    <a href="posts/notes-better-call-saul.html">Notes: Better Call Saul</a>
-                </td>
-            </tr>
-            <tr class="tag-row">
-                <td><!-- Empty <td> to align tags with title above. --></td>
-                <td>
-                    <ul class="post-tag-list">
-                                                    <li><a href="tags/notes.html">#notes</a></li>
-                                                    <li><a href="tags/tv.html">#tv</a></li>
-                                            </ul>
-                </td>
-            </tr>
-                    <tr>
-                <td>2023-02-27:&nbsp;&nbsp;</td>
-                <td>
-                    <a href="posts/hello-world.html">Hello, World</a>
-                </td>
-            </tr>
-            <tr class="tag-row">
-                <td><!-- Empty <td> to align tags with title above. --></td>
-                <td>
-                    <ul class="post-tag-list">
-                                            </ul>
-                </td>
-            </tr>
-            </table>
+            <tr>
+            <td>2024-03-03:&nbsp;&nbsp;</td>
+            <td>
+                <a href="posts/three-solutions-to-3-sum.html">Three Solutions to 3-Sum</a>
+            </td>
+        </tr>
+        <tr class="row-with-margin">
+            <td><!-- Empty <td> to align tags with title above. --></td>
+            <td>
+                <ul class="post-tag-list">
+                                            <li><a href="tags/algorithms.html">#algorithms</a></li>
+                                            <li><a href="tags/java.html">#java</a></li>
+                                            <li><a href="tags/tech.html">#tech</a></li>
+                                    </ul>
+            </td>
+        </tr>
+            <tr>
+            <td>2023-07-20:&nbsp;&nbsp;</td>
+            <td>
+                <a href="posts/converting-kindle-notes-to-markdown.html">Converting Kindle Notes to Markdown</a>
+            </td>
+        </tr>
+        <tr class="row-with-margin">
+            <td><!-- Empty <td> to align tags with title above. --></td>
+            <td>
+                <ul class="post-tag-list">
+                                            <li><a href="tags/perl.html">#perl</a></li>
+                                            <li><a href="tags/python.html">#python</a></li>
+                                            <li><a href="tags/regex.html">#regex</a></li>
+                                            <li><a href="tags/tech.html">#tech</a></li>
+                                    </ul>
+            </td>
+        </tr>
+            <tr>
+            <td>2023-07-08:&nbsp;&nbsp;</td>
+            <td>
+                <a href="posts/carlota.html">Carlota</a>
+            </td>
+        </tr>
+        <tr class="row-with-margin">
+            <td><!-- Empty <td> to align tags with title above. --></td>
+            <td>
+                <ul class="post-tag-list">
+                                            <li><a href="tags/recipes.html">#recipes</a></li>
+                                    </ul>
+            </td>
+        </tr>
+            <tr>
+            <td>2023-07-05:&nbsp;&nbsp;</td>
+            <td>
+                <a href="posts/how-i-built-this-site.html">How I Built This Site</a>
+            </td>
+        </tr>
+        <tr class="row-with-margin">
+            <td><!-- Empty <td> to align tags with title above. --></td>
+            <td>
+                <ul class="post-tag-list">
+                                            <li><a href="tags/php.html">#php</a></li>
+                                            <li><a href="tags/tech.html">#tech</a></li>
+                                    </ul>
+            </td>
+        </tr>
+            <tr>
+            <td>2023-05-12:&nbsp;&nbsp;</td>
+            <td>
+                <a href="posts/better-call-saul.html">Better Call Saul</a>
+            </td>
+        </tr>
+        <tr class="row-with-margin">
+            <td><!-- Empty <td> to align tags with title above. --></td>
+            <td>
+                <ul class="post-tag-list">
+                                            <li><a href="tags/notes.html">#notes</a></li>
+                                            <li><a href="tags/tv.html">#tv</a></li>
+                                    </ul>
+            </td>
+        </tr>
+            <tr>
+            <td>2023-02-27:&nbsp;&nbsp;</td>
+            <td>
+                <a href="posts/hello-world.html">Hello World</a>
+            </td>
+        </tr>
+        <tr class="row-with-margin">
+            <td><!-- Empty <td> to align tags with title above. --></td>
+            <td>
+                <ul class="post-tag-list">
+                                    </ul>
+            </td>
+        </tr>
+    </table>
     </article>
 </main>
 <footer>
-                <div class="footer-content">
+    <div class="footer-content">
         <table>
             <tr>
                 <td class="table-key">Published:&nbsp;&nbsp;</td>
                 <td>2023-02-27 06:00</td>
             </tr>
-                            <tr>
-                    <td class="table-key">Updated:&nbsp;&nbsp;</td>
-                    <td>2023-07-20 09:46</td>
-                </tr>
-                    </table>
+
+            <tr>
+                <td class="table-key">Updated:&nbsp;&nbsp;</td>
+                                    <td>2024-03-03 06:41</td>
+                            </tr>
+        </table>
     </div>
-    </footer>
+
+</footer>
 </body>
 </html>
 
