Build: fb1cf59 Use Post model instead of collection for nav

--- a/output/about.html
+++ b/output/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="assets/css/style.css"/>
     <meta name="description"
-          content="A personal blog by Chris Dempewolf about science, technology, computers, and computation in general."/>
+          content="A personal blog by Chris Dempewolf about science, technology, and computation."/>
     <link rel="stylesheet" href="assets/css/github-dark.min.css">
     <script src="assets/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
@@ -17,19 +17,19 @@
         <div class="site-title"><a href="index.html">Chris Dempewolf</a></div>
         <div class="nav-flex-container">
             <menu>
-                <li><a href="about.html">about</a></li>
+                <li><a href="about.html">About</a></li>
                 
-                <li><a href="resume.pdf" target="_blank">resume</a></li>
-                <li><a href="tags/index.html">tags</a></li>
+                <li><a href="resume.pdf" target="_blank">Resume</a></li>
+                <li><a href="tags/index.html">Tags</a></li>
             </menu>
         </div>
     </nav>
 </header>
 <main>
     <article>
-        <h1>    About
+        <h1 id="title">    About
 </h1>
-            <p>
+                            <p>
         Hello! I'm Chris Dempewolf (dim-pee-wolf), software engineer and former ESL teacher.
     </p>
 
@@ -81,20 +81,7 @@
     </article>
 </main>
 <footer>
-    <div class="footer-content">
-        <table>
-            <tr>
-                <td class="table-key">Published:&nbsp;&nbsp;</td>
-                <td>2023-02-27 00:18</td>
-            </tr>
-            <tr>
-                <td class="table-key">Updated:&nbsp;&nbsp;</td>
-                <td>2024-03-03 17:49</td>
-            </tr>
-        </table>
-    </div>
-    
-</footer>
+    </footer>
 </body>
 </html>
 
