--- a/output/about.html
+++ b/output/about.html
@@ -8,6 +8,18 @@
           content="A personal blog by Chris Dempewolf about science, technology, and computation."/>
     <link rel="stylesheet" href="assets/css/github-dark.min.css">
     <script src="assets/js/highlight.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']]
+            },
+            svg: {
+                fontCache: 'global'
+            }
+        };
+    </script>
     <script>hljs.highlightAll();</script>
     <title>Chris Dempewolf's Blog</title>
 </head>
@@ -34,9 +46,7 @@
     </p>
 
     <p>
-        I was born in the Fort Smith, Arkansas, USA. I lived in Seattle for 2 years and
-        abroad in Mexico, Japan, and Germany. I taught English for a couple of years and have worked as a software
-        engineer for 7 years.
+        I'm from <a href="https://en.wikipedia.org/wiki/Fort_Smith,_Arkansas">Fort Smith</a>, Arkansas. I lived in Seattle for 2 years and abroad in Mexico, Japan, and Germany. I taught English for a couple of years and have worked as a software engineer for 7 years.
     </p>
 
     <p>
@@ -45,9 +55,9 @@
 
     <figure>
             <img src="assets/img/me-selfie-cancun.jpg"
-                 alt="A selfie I took in Cancún.  I squint as the sun shines brightly overhead.  There is a palm tree behind me."
+                 alt="A selfie I took at a beach.  I squint as the sun shines brightly overhead.  I'm flanked by a palm tree."
                  width="200"
-                 title="The author in Cancún"/>
+                 title="The author at a tropical Mexican beach"/>
             <figcaption>At the beach</figcaption>
         </figure>
 
@@ -67,7 +77,7 @@
 
         <figure>
             <img src="assets/img/me-pacman.jpg"
-                 alt="Here, I'm playing Ms. PacMan on an arcade table in a dark Seattle bar. Turns out, they make arcade game tables so you can sit and do whatever.  In this case, drink a beer with a friend."
+                 alt="Here, I'm playing Ms. PacMan on an arcade table in a dark Seattle bar. Turns out, they make arcade game tables so you can sit and do whatever while you play - in this case, drink a beer with a friend."
                  width="200"
                  title="The author playing Ms. PacMan"/>
             <figcaption>Playing Ms. PacMan</figcaption>
