--- a/output/index.html
+++ b/output/index.html
@@ -8,6 +8,18 @@
           content="A personal blog by Chris Dempewolf about science, technology, and computation."/>
     <link rel="stylesheet" href="assets/css/github-dark.min.css">
     <script src="assets/js/highlight.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']]
+            },
+            svg: {
+                fontCache: 'global'
+            }
+        };
+    </script>
     <script>hljs.highlightAll();</script>
     <title>Chris Dempewolf's Blog</title>
 </head>
@@ -27,9 +39,25 @@
 </header>
 <main>
     <article>
-        <h1 id="title">    Posts
+        <h1 id="title">
+    Posts
 </h1>
                             <table class="content-list">
+            <tr>
+            <td>2024-03-06:&nbsp;&nbsp;</td>
+            <td>
+                <a href="posts/a-wizards-existential-crisis.html">A Wizard&#039;s Existential Crisis</a>
+            </td>
+        </tr>
+        <tr class="row-with-margin">
+            <td><!-- Empty <td> to align tags with title above. --></td>
+            <td>
+                <ul class="post-tag-list">
+                                            <li><a href="tags/existentialism.html">#existentialism</a></li>
+                                            <li><a href="tags/fiction.html">#fiction</a></li>
+                                    </ul>
+            </td>
+        </tr>
             <tr>
             <td>2024-03-03:&nbsp;&nbsp;</td>
             <td>
