Build: 2e0a955 Add 404 to main wget command

--- a/output/404.html
+++ b/output/404.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <meta name="description"
           content="A personal blog by Chris Dempewolf about science, technology, and computation."/>
-    <link rel="stylesheet" href="/assets/css/github-dark.min.css">
-    <script src="/assets/js/highlight.min.js"></script>
+    <link rel="stylesheet" href="assets/css/github-dark.min.css">
+    <script src="assets/js/highlight.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script>
@@ -26,13 +26,13 @@
 <body>
 <header>
     <nav>
-        <div class="site-title"><a href="/">Chris Dempewolf</a></div>
+        <div class="site-title"><a href="index.html">Chris Dempewolf</a></div>
         <div class="nav-flex-container">
             <menu>
-                <li><a href="/about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 
-                <li><a href="/resume.pdf" target="_blank">Resume</a></li>
-                <li><a href="/tags/">Tags</a></li>
+                <li><a href="resume.pdf" target="_blank">Resume</a></li>
+                <li><a href="tags/index.html">Tags</a></li>
             </menu>
         </div>
     </nav>
