--- a/output/404.html
+++ b/output/404.html
@@ -41,9 +41,16 @@
     <article>
         <h1 id="title">    404
 </h1>
-                            <p>
-        This page doesn't exist!
-    </p>
+                            <p id="404-message"></p>
+    <script>
+        const p = document.getElementById('404-message');
+        const codeNode = document.createElement('code');
+
+        codeNode.textContent = window.location.href;
+        p.appendChild(document.createTextNode('The URL you entered ('));
+        p.appendChild(codeNode);
+        p.appendChild(document.createTextNode(') does not exist on this site.'));
+    </script>
     </article>
 </main>
 <footer>
