Build: 8f0cfc3 Make 404 relative URLs absolute

--- a/output/404.html
+++ b/output/404.html
@@ -3,47 +3,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="https://chrisdempewolf.com/assets/css/style.css"/>
     <meta name="description"
           content="A personal blog by Chris Dempewolf about science, technology, and computation."/>
-    <link rel="stylesheet" href="assets/css/github-dark.min.css">
-    <script src="assets/js/highlight.min.js"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <title>Chris Dempewolf's Blog</title>
 </head>
 <body>
 <header>
     <nav>
-        <div class="site-title"><a href="index.html">Chris Dempewolf</a></div>
+        <div class="site-title"><a href="https://chrisdempewolf.com">Chris Dempewolf</a></div>
         <div class="nav-flex-container">
             <menu>
-                <li><a href="about.html">About</a></li>
+                <li><a href="https://chrisdempewolf.com/about.html">About</a></li>
                 
-                <li><a href="resume.pdf" target="_blank">Resume</a></li>
-                <li><a href="tags/index.html">Tags</a></li>
+                <li><a href="https://chrisdempewolf.com/resume.pdf" target="_blank">Resume</a></li>
+                <li><a href="https://chrisdempewolf.com/tags/index.html">Tags</a></li>
             </menu>
         </div>
     </nav>
 </header>
 <main>
     <article>
-        <h1 id="title">    404
-</h1>
-                            <p id="404-message"></p>
-    <script>
-        const p = document.getElementById('404-message');
-        const codeNode = document.createElement('code');
+        <h1 id="title">404</h1>
+        <p id="404-message"></p>
+        <script>
+            const p = document.getElementById('404-message');
+            const codeNode = document.createElement('code');
 
-        codeNode.textContent = window.location.href;
-        p.appendChild(document.createTextNode('The URL you entered ('));
-        p.appendChild(codeNode);
-        p.appendChild(document.createTextNode(') does not exist on this site.'));
-    </script>
+            codeNode.textContent = window.location.href;
+            p.appendChild(document.createTextNode('The URL you entered ('));
+            p.appendChild(codeNode);
+            p.appendChild(document.createTextNode(') does not exist on this site.'));
+        </script>
     </article>
 </main>
 <footer>
-    </footer>
+</footer>
 </body>
 </html>
-
