--- a/output/404.html
+++ b/output/404.html
@@ -22,7 +22,7 @@
                 
                 <li><a href="https://chrisdempewolf.com/resume.pdf" target="_blank">Resume</a></li>
                 <li><a href="https://chrisdempewolf.com/tags/index.html">Tags</a></li>
-                <li><a href="stats.html">Stats</a></li>
+                <li><a href="stats.html" target="_blank">Stats</a></li>
             </menu>
         </div>
     </nav>
