--- a/output/404.html
+++ b/output/404.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://chrisdempewolf.com/asfsets/css/style.css"/>
     <meta name="description"
           content="A personal blog by Chris Dempewolf about science, technology, and computation."/>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <script src="https://chrisdempewolf.com/assets/js/highlight.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -44,7 +45,7 @@
     </article>
 </main>
 <footer>
-    </footer>
+        </footer>
 </body>
 </html>
 
