Build: 0999c02 Add photo to about

--- a/output/about.html
+++ b/output/about.html
@@ -9,11 +9,12 @@
     <script src="assets/js/highlight.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <title>Chris Dempewolf's Blog</title>
 </head>
-<body class="bg-stone-950 text-stone-350 font-sans mx-4 my-2 max-w-fit md:mx-16 lg:mx-24 xl:mx-64">
+<body class="bg-black text-neutral-300 font-sans my-2 mx-auto sm:w-[90%] md:w-[80%] lg:w-[700px] xl:w-[1024px] px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12">
 <header class="flex flex-col mb-6">
-    <a class="text-3xl font-bold no-underline text-stone-200 hover:text-white lg:text-7xl" href="index.html">Chris Dempewolf</a>
+    <a class="text-3xl font-bold no-underline text-stone-200 hover:text-chartreuse text-7xl" href="index.html"><span style="font-family: 'HanSerif';">初心 </span><br>Shoshin</a>
     <nav class="flex space-x-4 mt-2 mb-8">
         <a class="" href="about.html">About</a>
         
@@ -27,32 +28,37 @@
     <article class="my-9 pb-9">
         <h1 class="text-3xl font-bold my-2">    About
 </h1>
-                            <p>
-        Hello! I'm Chris Dempewolf (dim-pee-wolf), software engineer and former ESL teacher.
-    </p>
-    <p>
-        I'm from <a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Fort_Smith,_Arkansas">Fort Smith</a>, Arkansas. I lived in Seattle for 2 years and abroad in Mexico, Japan, and Germany. I taught English for a couple of years and have worked as a software engineer for 7 years.
-    </p>
-    <p>
-        This is what I look like:
-    </p>
-    <figure>
-        <img src="assets/img/me-selfie-cancun.jpg"
-             alt="A selfie I took at a beach.  I squint as the sun shines brightly overhead.  I'm flanked by a palm tree."
-             width="200"
-             title="The author at a tropical Mexican beach"/>
-        <figcaption>At the beach</figcaption>
-    </figure>
-    <figure>
-        <img src="assets/img/me-pacman.jpg"
-             alt="Here, I'm playing Ms. PacMan on an arcade table in a dark Seattle bar. Turns out, they make arcade game tables so you can sit and do whatever while you play - in this case, drink a beer with a friend."
-             width="200"
-             title="The author playing Ms. PacMan"/>
-        <figcaption>Playing Ms. PacMan</figcaption>
-    </figure>
-    <p>
-        Thanks for stopping by!
-    </p>
+                            <h2 id="me"><a class="no-underline text-stone-200 hover:text-chartreuse" href="about.html#me">Me</a></h2>
+    <div class="flex flex-col md:flex-row md:items-start">
+      <div class="mx-auto w-1/2 md:mx-1 md:order-first">
+				<figure class="mx-0">
+						<img src="assets/img/me-selfie-cancun.jpg"
+												alt="The author, hair dyed blue, standing in front of a palm tree, squinting due to the tropical sun."
+												width="200"
+												title="The author in Playa del Carmen"/>
+						<figcaption>In Playa del Carmen</figcaption>
+				</figure>
+      </div>
+      <div class="w-full order-first">
+				<p>
+						Hello! I'm Chris Dempewolf (dim-pee-wolf), software engineer, former ESL teacher, and, most recently, father.
+				</p>
+				<p>
+						I'm from <a target="_blank" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Fort_Smith,_Arkansas">Fort Smith</a>, Arkansas. I lived in Seattle for 2 years and abroad in Mexico 🇲🇽, Japan 🇯🇵, and Germany 🇩🇪. I taught English for a couple of years and have worked as a software engineer for 7 years.
+				</p>
+				<p>
+					I made this blog to explore my thoughts. I don't really know what I know until I write it, so this is meant to serve as my light in the dark.
+				</p>
+      </div>
+    </div>
+    <h2 id="the-title"><a class="no-underline text-stone-200 hover:text-chartreuse" href="about.html#the-title">The Title</a></h2>
+		<figure class="blockquote">
+				<blockquote>
+						<p>In the beginner's mind, there are many possibilities; in the expert's mind there are few.</p>
+				</blockquote>
+				<figcaption>Shunryu Suzuki, <em>Zen Mind, Beginner's Mind</em></figcaption>
+		</figure>
+    <p>This blog's title, <em>Shoshin</em>, is a Zen concept roughly translated as "beginner's mind", a concept first popularized in the West by Zen teacher <a target="_blank" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Shunry%C5%AB_Suzuki">Shunryu Suzuki</a> in his book, <em><a target="_blank" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Zen_Mind,_Beginner's_Mind">Zen Mind, Beginner's Mind</a></em>. It implies curiosity, openness, and approaching things without preconceptions.  It is the goal of this blog to explore many new and interesting topics—always through the eyes of a beginner.</p>
     </article>
 </main>
 <footer>
