--- a/output/404.html
+++ b/output/404.html
@@ -9,11 +9,12 @@
     <script src="https://chrisdempewolf.com/assets/js/highlight.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <title>Chris Dempewolf's Blog</title>
 </head>
-<body class="bg-stone-950 text-stone-350 font-sans mx-4 my-2 max-w-fit md:mx-16 lg:mx-24 xl:mx-64">
+<body class="bg-black text-neutral-300 font-sans my-2 mx-auto sm:w-[90%] md:w-[80%] lg:w-[700px] xl:w-[1024px] px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12">
 <header class="flex flex-col mb-6">
-    <a class="text-3xl font-bold no-underline text-stone-200 hover:text-white lg:text-7xl" href="index.html">Chris Dempewolf</a>
+    <a class="text-3xl font-bold no-underline text-stone-200 hover:text-chartreuse text-7xl" href="index.html"><span style="font-family: 'HanSerif';">初心 </span><br>Shoshin</a>
     <nav class="flex space-x-4 mt-2 mb-8">
         <a class="" href="https://chrisdempewolf.com/about.html">About</a>
         
