--- a/output/404.html
+++ b/output/404.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <title>Chris Dempewolf's Blog</title>
 </head>
-<body class="bg-black text-neutral-300 font-sans my-2 mx-auto sm:w-[90%] md:w-[80%] lg:w-[700px] xl:w-[1024px] px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12">
+<body class="bg-[#0a0a0a] text-neutral-300 font-sans my-2 mx-auto sm:w-[90%] md:w-[80%] lg:w-[700px] xl:w-[1024px] px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12">
 <header class="flex flex-col mb-6">
     <a class="text-3xl font-bold no-underline text-stone-200 hover:text-chartreuse text-7xl" href="index.html"><span style="font-family: 'HanSerif';">初心 </span><br>Shoshin</a>
     <nav class="flex space-x-4 mt-2 mb-8">
