--- a/output/index.html
+++ b/output/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <title>Chris Dempewolf's Blog</title>
 </head>
-<body class="bg-black text-neutral-300 font-sans my-2 mx-auto sm:w-[90%] md:w-[80%] lg:w-[700px] xl:w-[1024px] px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12">
+<body class="bg-[#0a0a0a] text-neutral-300 font-sans my-2 mx-auto sm:w-[90%] md:w-[80%] lg:w-[700px] xl:w-[1024px] px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12">
 <header class="flex flex-col mb-6">
     <a class="text-3xl font-bold no-underline text-stone-200 hover:text-chartreuse text-7xl" href="index.html"><span style="font-family: 'HanSerif';">初心 </span><br>Shoshin</a>
     <nav class="flex space-x-4 mt-2 mb-8">
@@ -36,15 +36,28 @@
     <tr>
         <td>Updated:&nbsp;&nbsp;</td>
         <td>
-            2024-03-06 14:31
+            2024-07-06 17:56
         </td>
     </tr>
     <tr>
         <td>Total:&nbsp;&nbsp;</td>
-        <td>7</td>
+        <td>8</td>
     </tr>
             </table>
                             <div class="flex flex-col my-9">
+            <div class="flex flex-row space-x-4">
+            <span class="whitespace-nowrap">
+                2024-07-06:&nbsp;&nbsp;
+            </span>
+            <div class="flex flex-col">
+                <div>
+                    <a class="text-lg font-normal text-neutral-200 no-underline hover:text-chartreuese" href="posts/2023-in-books.html">2023 in Books</a>
+                </div>
+                <div class="flex space-x-4">
+                                            <a class="text-sm text-stone-400 font-normal no-underline hover:text-chartreuse" href="tags/books.html">#books</a>
+                                    </div>
+            </div>
+        </div>
             <div class="flex flex-row space-x-4">
             <span class="whitespace-nowrap">
                 2024-03-06:&nbsp;&nbsp;
