Build: e881932 Build: 85e2198 Set bg color 0a0a0a

--- a/output/about.html
+++ b/output/about.html
@@ -30,7 +30,7 @@
 </h1>
                             <h2 id="me"><a class="no-underline text-stone-200 hover:text-chartreuse" href="about.html#me">Me</a></h2>
     <div class="flex flex-col md:flex-row md:items-start">
-      <div class="mx-auto w-1/2 md:mx-1 md:order-first">
+      <div class="mx-auto w-1/2 md:-mt-4 md:-mx-4 md:order-first">
 				<figure class="mx-0">
 						<img src="assets/img/me-selfie-cancun.jpg"
 												alt="The author, hair dyed blue, standing in front of a palm tree, squinting due to the tropical sun."
