--- a/output/about.html
+++ b/output/about.html
@@ -41,13 +41,13 @@
       </div>
       <div class="w-full order-first">
 				<p>
-						Hello! I'm Chris Dempewolf (dim-pee-wolf), software engineer, former ESL teacher, and, most recently, father.
+						Hello! I'm Chris Dempewolf (dim-pee-wolf), software engineer, former ESL teacher, and, most recently, husband and father.
 				</p>
 				<p>
-						I'm from <a target="_blank" target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Fort_Smith,_Arkansas">Fort Smith</a>, Arkansas. I lived in Seattle for 2 years and abroad in Mexico 🇲🇽, Japan 🇯🇵, and Germany 🇩🇪. I taught English for a couple of years and have worked as a software engineer for 7 years.
+						I'm from <a target="_blank" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Fort_Smith,_Arkansas">Fort Smith</a>, Arkansas. I lived in Seattle for 2 years and abroad in Mexico 🇲🇽, Japan 🇯🇵, and Germany 🇩🇪. I taught English for a couple of years and have worked as a software engineer for 7 years.
 				</p>
 				<p>
-					I made this blog to explore my thoughts. I don't really know what I know until I write it, so this is meant to serve as my light in the dark.
+					I made this blog to explore my thoughts and practice my writing. I don't really know what I know until I write it, so this is meant to serve as my light in the dark.
 				</p>
       </div>
     </div>
@@ -58,7 +58,7 @@
 				</blockquote>
 				<figcaption>Shunryu Suzuki, <em>Zen Mind, Beginner's Mind</em></figcaption>
 		</figure>
-    <p>This blog's title, <em>Shoshin</em>, is a Zen concept roughly translated as "beginner's mind", a concept first popularized in the West by Zen teacher <a target="_blank" target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Shunry%C5%AB_Suzuki">Shunryu Suzuki</a> in his book, <em><a target="_blank" target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Zen_Mind,_Beginner's_Mind">Zen Mind, Beginner's Mind</a></em>. It implies curiosity, openness, and approaching things without preconceptions.  It is the goal of this blog to explore many new and interesting topics—always through the eyes of a beginner.</p>
+    <p>This blog's title, <em>Shoshin</em>, is a Zen concept roughly translated as "beginner's mind", a concept first popularized in the West by Zen teacher <a target="_blank" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Shunry%C5%AB_Suzuki">Shunryu Suzuki</a> in his book, <em><a target="_blank" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Zen_Mind,_Beginner's_Mind">Zen Mind, Beginner's Mind</a></em>. It implies curiosity, openness, and approaching things without preconceptions.  It is the goal of this blog to explore many new and interesting topics—always through the eyes of a beginner.</p>
     </article>
 </main>
 <footer>
