--- a/output/404.html
+++ b/output/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A personal blog by Chris Dempewolf about science, technology, and computation."/>
     <link rel="stylesheet" href="assets/css/output.css"/>
-    <script src="https://chrisdempewolf.com/assets/js/highlight.min.js"></script>
+    <script src="assets/js/highlight.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
@@ -16,10 +16,10 @@
 <header class="flex flex-col mb-6">
     <a class="text-3xl font-bold no-underline text-stone-200 hover:text-chartreuse text-7xl" href="index.html"><span style="font-family: 'HanSerif';">初心 </span><br>Shoshin</a>
     <nav class="flex space-x-4 mt-2 mb-8">
-        <a class="" href="https://chrisdempewolf.com/about.html">About</a>
+        <a class="" href="about.html">About</a>
         
-        <a href="https://chrisdempewolf.com/resume.pdf" target="_blank">Resume</a>
-        <a href="https://chrisdempewolf.com/tags/index.html">Tags</a>
+        <a href="resume.pdf" target="_blank">Resume</a>
+        <a href="tags/index.html">Tags</a>
         <a href="feed.rss" target="_blank">RSS</a>
         <a href="stats.html" target="_blank">Stats</a>
     </nav>
